<resources>
    <string name="app_name" translatable="false">bSigner</string>

    <string name="app_name_subtitle">Multiply your security</string>

    <string name="all_cancel">Cancel</string>
    <string name="all_continue">Continue</string>
    <string name="all_edit">Edit</string>
    <string name="all_delete">Delete</string>
    <string name="all_loading">Loading…</string>
    <string name="all_language">Language</string>
    <string name="all_copy">Copy</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>

    <string name="copy_menemonic">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="next">Next</string>
    <string name="chose">Chose</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>

    <string name="create_account">Create signer</string>
    <string name="backup_account_title">Backup Your Signer</string>
    <string name="backup_account_subtitle">You will be shown a 12 word recovery phrase. It will allow you to recover access to your signer in case your phone is lost or stolen.</string>
    <string name="backup_understand">I Understand</string>

    <string name="verify_phrase_title">Verify Recovery Phrase</string>
    <string name="verify_phrase_hint">Tap the words in correct order</string>
    <string name="verify_does_not_match">Verify mnemonics don\'t match</string>

    <string name="first_time_help_section">First time user? See our Help section</string>
    <string name="agree_with_terms_and_privacy_policy">By registering you agree to our Terms of Service and Privacy Policy</string>

    <string name="recover_account">Recover signer</string>
    <string name="recovery_phrase">Recovery Phrase</string>
    <string name="recovery_phrase_hint">Recovery phrase can help you to recover access to your signer in case your phone is lost or stolen.</string>
    <string name="recovery_phrase_save_hint">Write down these 12 words and keep them secure. Don’t email them or screenshot them.</string>
    <string name="recovery_phrase_confirm_next_hint">You will need to confirm recovery phrase on the next screen</string>
    <string name="recover_account_hint">Enter the 12 or 24 recovery words you were given when you created your signer</string>

    <string name="signer_list">Your signers</string>

    <string name="no_accounts_added">No signers added. Add an signer now?</string>
    <string name="error_account_already_exist">Signer already exists</string>
    <string name="error_undefined">Something went wrong</string>

    <string name="item_signer_no_name">(no name)</string>

    <string name="pin_create_hint">Setup a new PIN</string>
    <string name="pin_verify_setup_pin_hint">Enter your PIN</string>
    <string name="pin_verify_new_pin_hint">Reenter your new PIN</string>
    <string name="pin_continue">Continue</string>
    <string name="pin_changed_success">Change PIN success</string>
    <string name="pin_changed_failed">Change PIN failed</string>

    <string name="enter_account_name">Enter your signer name</string>
    <string name="warning_delete">This action cannot revert, continue to delete this signer?</string>

    <string name="sign_transaction_title">Transaction Info</string>
    <string name="sign_transaction_subtitle">Approve transaction</string>
    <string name="sign_transaction_amount">Amount</string>
    <string name="sign_transaction_memo">Memo</string>
    <string name="sign_transaction_from">From</string>
    <string name="sign_transaction_to">To</string>
    <string name="sign_transaction_signature_list">Signatures</string>
    <string name="sign_transaction_not_enough_signer">You don\'t have enough signers to sign transaction</string>
    <string name="sign_transaction_approve">Approve</string>

    <string name="settings_system">System</string>
    <string name="settings_security">Security</string>
    <string name="settings_help">Help</string>
    <string name="settings_use_finger_print_to_login">Use finger print to login</string>
    <string name="settings_change_pin">Change PIN</string>
    <string name="settings_term_of_service">Term of service</string>
    <string name="settings_frequently_asked_questions">Frequently asked questions</string>

    <string name="transaction_list">Transaction List</string>
    <string name="transaction_owner">Transaction Owner</string>
    <string name="transaction_name">Transaction Name</string>

    <string name="transaction_signature_signed">Signed</string>
    <string name="transaction_signature_waiting">Waiting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>
