<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createMnemonic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:title=" "/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/recovery_phrase"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/recovery_phrase_hint"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp"/>

    <com.luvapay.bsigner.ui.MnemonicListView
        android:id="@+id/createMnemonic_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:background="@drawable/bg_mnemonic_container"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvMnemonicsInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/recovery_phrase_save_hint"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/createMnemonic_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:iconTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary"
            android:text="@string/copy_menemonic"
            app:icon="@drawable/ic_content_copy"
            android:textAllCaps="false"/>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/createMnemonic_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        android:text="@string/next"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:text="@string/recovery_phrase_confirm_next_hint"/>

</LinearLayout>