<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".activities.multisign.SignTransactionActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="32dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/sign_transaction_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activitySignTransaction_fromToTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_loading"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_transaction_amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activitySignTransaction_amountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/all_loading"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_transaction_memo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activitySignTransaction_memoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/all_loading"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/sign_transaction_subtitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:clipToPadding="false">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/activitySignTransaction_keyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activitySignTransaction_signerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/activitySignTransaction_signBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintWidth_percent="0.36"
            app:cornerRadius="24dp"
            android:text="@string/all_continue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/activitySignTransaction_cancelBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activitySignTransaction_keyContainer"
            app:layout_constraintBottom_toBottomOf="@id/activitySignTransaction_keyContainer"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/activitySignTransaction_cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintWidth_percent="0.36"
            android:backgroundTint="#FFF5F5F5"
            android:textColor="#484848"
            app:cornerRadius="24dp"
            android:text="@string/all_cancel"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activitySignTransaction_signBtn"
            app:layout_constraintTop_toBottomOf="@id/activitySignTransaction_keyContainer"
            app:layout_constraintBottom_toBottomOf="@id/activitySignTransaction_keyContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>