<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/home_titleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_menuContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/app_ic_bsigner"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/app_name_subtitle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_menuContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/home_titleContainer"
        app:layout_constraintBottom_toTopOf="@id/home_termsAndPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/home_create"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_account"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/home_restore"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/recover_account" />
        <!--<com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/activityWelcome_languageSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/language">
            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:linksClickable="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColorLink="@color/colorPrimary"
            android:text="@string/first_time_help_section"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_termsAndPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:text="@string/agree_with_terms_and_privacy_policy"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/home_menuContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>