<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.account.RecoverAccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityRecover_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:title=" "/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/recover_account"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/recover_account_hint"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/activityRecover_mnemonicEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="24dp"
        android:gravity="start|top"
        android:background="@drawable/bg_mnemonic_container"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:maxLines="10"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/activityRecover_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/next"/>

</LinearLayout>