<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VerifyMnemonicActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/verifyMnemonic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:title=" "/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/verify_phrase_title"/>

    <com.luvapay.bsigner.ui.MnemonicListView
        android:id="@+id/verifyMnemonic_verifyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:background="@drawable/bg_mnemonic_container"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/verify_phrase_hint"/>

    <com.luvapay.bsigner.ui.MnemonicListView
        android:id="@+id/verifyMnemonic_tapList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:padding="10dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/verifyMnemonic_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/white"
        android:text="@string/next"/>

</LinearLayout>