<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.transaction.TransactionDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityTransactionDetail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/sign_transaction_title"/>

    <!--<Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"/>-->

    <!--<androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/sign_transaction_title"/>-->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:text="@string/sign_transaction_from"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activityTransactionDetail_fromTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/all_loading"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textSize="14sp"
        android:letterSpacing="0.072"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:text="@string/sign_transaction_to"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activityTransactionDetail_toTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textSize="14sp"
        android:text="@string/all_loading"
        android:letterSpacing="0.072"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/sign_transaction_amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityTransactionDetail_amountTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textSize="14sp"
            android:letterSpacing="0.072"
            android:text="@string/all_loading"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/sign_transaction_memo"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityTransactionDetail_memoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textSize="14sp"
            android:letterSpacing="0.072"
            android:text="@string/all_loading"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:text="@string/sign_transaction_signature_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activityTransactionDetail_signatureList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:clipToPadding="false"/>

    <!--<androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/sign_transaction_subtitle" />-->

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/activityTransactionDetail_signBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:elevation="2dp"
        app:cornerRadius="24dp"
        android:text="@string/sign_transaction_approve"/>

    <!--<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/activityTransactionDetail_keyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardUseCompatPadding="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityTransactionDetail_signerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:clipToPadding="false"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/activityTransactionDetail_signBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintWidth_percent="0.36"
            android:elevation="2dp"
            app:cornerRadius="24dp"
            android:text="@string/sign_transaction_approve"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/activityTransactionDetail_cancelBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityTransactionDetail_keyContainer"
            app:layout_constraintBottom_toBottomOf="@id/activityTransactionDetail_keyContainer"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/activityTransactionDetail_cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintWidth_percent="0.36"
            android:elevation="2dp"
            android:backgroundTint="#FFF5F5F5"
            android:textColor="#484848"
            app:cornerRadius="24dp"
            android:text="@string/all_cancel"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/activityTransactionDetail_signBtn"
            app:layout_constraintTop_toBottomOf="@id/activityTransactionDetail_keyContainer"
            app:layout_constraintBottom_toBottomOf="@id/activityTransactionDetail_keyContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>-->

</LinearLayout>